multiplexer doc
